--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     font-family: 'Trebuchet MS';
     background-position: center;
     background-size: cover;
-    color :black;
+    color :white;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 
 }
