--- a/style/style.css
+++ b/style/style.css
@@ -1,24 +1,32 @@
 .clear {
-    background-image: url("soleil.jpg");
+    background-image: url("../pics/soleil.jpg");
 }
 .clouds {
-    background-image: url("nuage.jpg");
+    background-image: url("../pics/nuage.jpg");
 }
 
 .rain {
-    background-image:url("pluie.jpg") ;
+    background-image:url("../pics/pluie.jpg") ;
 }
 
 .snow {
-    background-image: url("niege.jpg");
+    background-image: url("../pics/niege.jpg");
+}
+
+.dust {
+    background-image: url("../pics/Poussiere.jpg");
 }
 
 .humidity {
-    background-image: url("niege.jpg")
+    background-image: url("../pics/pluie.jpg")
 }
 
 .wind {
     background-image: url("niege.jpg")
+}
+
+.mist {
+    background-image: url("../pics/Brume.jpg")
 }
 
 
